--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -2,6 +2,13 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/campusonlinetest
 jdbc.username=root
 jdbc.password=root
+
+
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12245111
+#jdbc.username=sql12245111
+#jdbc.password=LQzfcJ6Ybl
+
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
